--- a/inst/rmd/ML_report_taxonomy.Rmd
+++ b/inst/rmd/ML_report_taxonomy.Rmd
@@ -50,10 +50,9 @@ library(pheatmap)
 library(reshape2)
 library(vegan)
 library(ggdendro)
-# library(gridExtra)
-
-#library(plotly)
-# library(DT)
+library(gridExtra)
+library(knitr)
+library(DT)
 # for interactive data table display 
 
 # local usage test and debug
@@ -62,7 +61,7 @@ library(ggdendro)
 
 # version control
 # 20190819
-
+# 20210608 added Meta information; added downloadable tables
 
 
 ```
@@ -71,7 +70,9 @@ library(ggdendro)
 
 ```{r function_needed, recho=FALSE}
 
-tidy_MQ_taxonomy <- function(df_taxonomy.txt){
+# long tables for ggplot and short tables for others
+
+tidy_MQ_taxonomy_long <- function(df_taxonomy.txt){
   
     extract_species_gg <- melt(data = df_taxonomy.txt[df_taxonomy.txt$Rank == 'Species', -c(2:10)],               
                             id.vars = c("Name"), variable.name = "Sample", value.name = "Intensity")
@@ -85,7 +86,17 @@ tidy_MQ_taxonomy <- function(df_taxonomy.txt){
                             id.vars = c("Name"), variable.name = "Sample", value.name = "Intensity")
     extract_phylum_gg <- melt(data = df_taxonomy.txt[df_taxonomy.txt$Rank == 'Phylum', -c(2:10)],               
                             id.vars = c("Name"), variable.name = "Sample", value.name = "Intensity")
-    
+
+    return(list("extract_species_gg" = extract_species_gg,
+                "extract_genus_gg" = extract_genus_gg,
+                "extract_family_gg" = extract_family_gg,
+                "extract_order_gg" = extract_order_gg,
+                "extract_class_gg" = extract_class_gg,
+                "extract_phylum_gg" = extract_phylum_gg
+    ))
+}
+
+tidy_MQ_taxonomy_short <- function(df_taxonomy.txt){    
     extract_species <- df_taxonomy.txt[df_taxonomy.txt$Rank == 'Species', -c(2:10)]  %>%  remove_rownames %>% column_to_rownames(var="Name")
     extract_genus <- df_taxonomy.txt[df_taxonomy.txt$Rank == 'Genus', -c(2:10)]  %>%  remove_rownames %>% column_to_rownames(var="Name")
     extract_family <- df_taxonomy.txt[df_taxonomy.txt$Rank == 'Family', -c(2:10)]  %>%  remove_rownames %>% column_to_rownames(var="Name")
@@ -93,20 +104,13 @@ tidy_MQ_taxonomy <- function(df_taxonomy.txt){
     extract_class <- df_taxonomy.txt[df_taxonomy.txt$Rank == 'Class', -c(2:10)]  %>%  remove_rownames %>% column_to_rownames(var="Name")
     extract_phylum <- df_taxonomy.txt[df_taxonomy.txt$Rank == 'Phylum', -c(2:10)]  %>%  remove_rownames %>% column_to_rownames(var="Name")
 
-    return(list("extract_species_gg" = extract_species_gg,
-                "extract_genus_gg" = extract_genus_gg,
-                "extract_family_gg" = extract_family_gg,
-                "extract_order_gg" = extract_order_gg,
-                "extract_class_gg" = extract_class_gg,
-                "extract_phylum_gg" = extract_phylum_gg,
-                "extract_species" = extract_species,
+    return(list("extract_species" = extract_species,
                 "extract_genus" = extract_genus,
                 "extract_family" = extract_family,
                 "extract_order" = extract_order,
                 "extract_class" = extract_class,
                 "extract_phylum" = extract_phylum
     ))
-
 }
 
 ```
@@ -130,21 +134,22 @@ if(is.null(params$input_datatable)){
 # Note: The folling analysis with meta info assumes that
 # 1st columns as sample name, 2nd column as experiment name, 3rd column and after as grouping
 
-meta_table <- params$meta_table 
+meta_table <- params$meta_table
 # if there is any null value in the meta colum, set the meta as NULL
 if(any(is.na(meta_table$meta1))){
   meta_table <- NULL
 }
 
+## For testing:
+# meta_table <- read.delim("metainfo.txt", header = TRUE, check.names = FALSE, stringsAsFactors = FALSE)
+# meta_table <- NULL
 
 # use if(!is.null(meta_table))  to deal with data with meta 
 
 
-
-# tidy
-
-summary_file_taxonomy <- tidy_MQ_taxonomy(df_taxonomy.txt)
-
+# generate tidy tables
+summary_file_taxonomy_long <- tidy_MQ_taxonomy_long(df_taxonomy.txt)
+summary_file_taxonomy_short <- tidy_MQ_taxonomy_short(df_taxonomy.txt)
 
 ```
 
@@ -158,125 +163,307 @@ summary_file_taxonomy <- tidy_MQ_taxonomy(df_taxonomy.txt)
 # Sample overview
 
 *  **Number of samples in your dataset: ** `r ncol(df_taxonomy.txt)-10`
-*  **Number of species identified: ** `r nrow(summary_file_taxonomy$extract_species)`
-*  **Number of genera identified: ** `r nrow(summary_file_taxonomy$extract_genus)`
-*  **Number of families identified: ** `r nrow(summary_file_taxonomy$extract_family)`
-*  **Number of orders identified: ** `r nrow(summary_file_taxonomy$extract_order)`
-*  **Number of classes identified: ** `r nrow(summary_file_taxonomy$extract_class)`
-*  **Number of phyla identified: ** `r nrow(summary_file_taxonomy$extract_phylum)`
+*  **Number of species identified: ** `r nrow(summary_file_taxonomy_short$extract_species)`
+*  **Number of genera identified: ** `r nrow(summary_file_taxonomy_short$extract_genus)`
+*  **Number of families identified: ** `r nrow(summary_file_taxonomy_short$extract_family)`
+*  **Number of orders identified: ** `r nrow(summary_file_taxonomy_short$extract_order)`
+*  **Number of classes identified: ** `r nrow(summary_file_taxonomy_short$extract_class)`
+*  **Number of phyla identified: ** `r nrow(summary_file_taxonomy_short$extract_phylum)`
 
-# Identification per sample
+# Identification on different levels
 
-```{r identification_fig, echo=FALSE, fig.width= 10, fig.height=4}
+```{r identification_fig, echo=FALSE, fig.width= 10, fig.height=5}
 
-  idnumber <- specnumber(t(summary_file_taxonomy$extract_species))
-  idnumber <- as.data.frame(idnumber)
-  idnumber <- as.data.frame(cbind(names = rownames(idnumber), idnumber))
-  
-  p1 <- ggplotly(ggplot(data=idnumber) +
-        geom_col(aes(x=names, y=idnumber)) + theme_bw() +coord_flip()+
-        xlab("Sample labels") +
-        ylab("Number of species identified"))
-  
-  idnumberg <- specnumber(t(summary_file_taxonomy$extract_genus))
-  idnumberg <- as.data.frame(idnumberg)
-  idnumberg <- as.data.frame(cbind(names = rownames(idnumberg), idnumberg))
-  
-  p2 <- ggplotly(ggplot(data=idnumberg) +
-        geom_col(aes(x=names, y=idnumberg)) + theme_bw() +coord_flip()+ theme(axis.text.y=element_blank()) +
-        ylab("Number of genera identified"))
-  
-  idnumberf <- specnumber(t(summary_file_taxonomy$extract_family))
-  idnumberf <- as.data.frame(idnumberf)
-  idnumberf <- as.data.frame(cbind(names = rownames(idnumberf), idnumberf))
-  
-  p3 <- ggplotly(ggplot(data=idnumberf) +
-        geom_col(aes(x=names, y=idnumberf)) + theme_bw() +coord_flip()+ 
-        xlab("Sample labels") + ylab("Number of families identified"))
-  
-  idnumbero <- specnumber(t(summary_file_taxonomy$extract_order))
-  idnumbero <- as.data.frame(idnumbero)
-  idnumbero <- as.data.frame(cbind(names = rownames(idnumbero), idnumbero))
-  
-  p4 <- ggplotly(ggplot(data=idnumbero) +
-        geom_col(aes(x=names, y=idnumbero)) + theme_bw() +coord_flip()+ 
-        xlab("Sample labels") + ylab("Number of orders identified"))
-  
-  idnumberc <- specnumber(t(summary_file_taxonomy$extract_class))
-  idnumberc <- as.data.frame(idnumberc)
-  idnumberc <- as.data.frame(cbind(names = rownames(idnumberc), idnumberc))
-  
-  p5 <- ggplotly(ggplot(data=idnumberc) +
-        geom_col(aes(x=names, y=idnumberc)) + theme_bw() +coord_flip()+ 
-        xlab("Sample labels") + ylab("Number of classes identified"))
-  
-  idnumberp <- specnumber(t(summary_file_taxonomy$extract_phylum))
-  idnumberp <- as.data.frame(idnumberp)
-  idnumberp <- as.data.frame(cbind(names = rownames(idnumberp), idnumberp))
-  
-  p6 <- ggplotly(ggplot(data=idnumberp) +
-        geom_col(aes(x=names, y=idnumberp)) + theme_bw() +coord_flip()+ 
-        xlab("Sample labels") + ylab("Number of phyla identified"))
+j = 1
+plot_id <- list()
+id_number <- list()
+taxa_level <- c("Species", "Genus", "Family", "Order", "Class", "Phylum")
 
-  subplot(p1,p2,p3, nrows=1, shareY = TRUE, shareX = TRUE)
-  subplot(p4,p5,p6, nrows=1, shareY = TRUE, shareX = TRUE)
-    
+for (i in summary_file_taxonomy_short) {
+       
+       if(is.null(meta_table)){
+         
+       idnumber_level <- function(taxa_level){
+                       idnumber <- specnumber(t(taxa_level))
+                       idnumber <- as.data.frame(idnumber)
+                       idnumber <- as.data.frame(cbind(names = rownames(idnumber), idnumber))
+                       return(idnumber)}
+       id_number[[j]] <- idnumber_level(i)
+
+       }else{
+       
+       idnumber_level <- function(taxa_level){
+                       idnumber <- specnumber(t(taxa_level))
+                       idnumber <- as.data.frame(idnumber)
+                       idnumber <- as.data.frame(cbind(names = rownames(idnumber), Meta = meta_table$meta1, idnumber))
+                       return(idnumber)}
+       id_number[[j]] <- idnumber_level(i)
+       
+       plot_id[[j]] <- ggplotly(ggplot(data=id_number[[j]], aes(x=Meta, y=idnumber) ) + 
+                    geom_jitter(position=position_jitter(width=0.3), alpha=0.9) +
+                    geom_boxplot(alpha = 0.8, show.legend = FALSE, aes(fill=factor(Meta))) + 
+                    scale_fill_brewer(palette="Dark2")+
+                    expand_limits(y = 0) + 
+                    ylab(paste0("ID# at ", taxa_level[j], " level"))+ theme_bw())
+       }
+  j = j+1
+}
+
+
+if(is.null(meta_table)){
+  
+  ID_result_short <-  cbind(Species = id_number[[1]][, ncol(id_number[[1]])],
+                      Genus = id_number[[2]][, ncol(id_number[[1]])],
+                      Family = id_number[[3]][, ncol(id_number[[1]])],
+                      Order = id_number[[4]][, ncol(id_number[[1]])],
+                      Class = id_number[[5]][, ncol(id_number[[1]])],
+                      Phylum = id_number[[6]][, ncol(id_number[[1]])]) 
+  ID_result_long <- melt(ID_result_short)
+  ggplotly(ggplot(ID_result_long, aes(x=Var2, y = value))+
+             geom_boxplot(alpha = 0.8, show.legend = FALSE, aes(fill=factor(Var2))) + 
+             geom_jitter(position=position_jitter(width=0.3), alpha=0.9) +
+             scale_fill_brewer(palette="Dark2")+
+             expand_limits(y = 0) + 
+             ylab("Number of identificaton")+ xlab("Level") + theme_bw()) %>%
+             layout(autosize = F, width = 500, height = 400)
+
+}else{
+ subplot(plot_id[[1]], plot_id[[2]], plot_id[[3]], 
+         plot_id[[4]], plot_id[[5]], plot_id[[6]], 
+         nrows = 2, margin=0.04, titleY = TRUE) %>% layout(showlegend = FALSE)
+}
+
+
+
+```
+Result table for download
+```{r identification_data, echo=FALSE,fig.width= 8,fig.height=4, cache = FALSE}
+
+# Generate result tables
+if(is.null(meta_table)){
+ID_result<-  cbind(colnames(summary_file_taxonomy_short$extract_species),
+                   Species = id_number[[1]][, ncol(id_number[[1]])],
+                   Genus = id_number[[2]][, ncol(id_number[[1]])],
+                   Family = id_number[[3]][, ncol(id_number[[1]])],
+                   Order = id_number[[4]][, ncol(id_number[[1]])],
+                   Class = id_number[[5]][, ncol(id_number[[1]])],
+                   Phylum = id_number[[6]][, ncol(id_number[[1]])])  
+
+datatable(ID_result, extensions = 'Buttons',
+            options = list(dom = 'Blfrtip',
+                           scrollX = TRUE,
+                           buttons = c('copy', 'csv', 'excel'),
+                           pageLength = 10))
+}else{
+ID_result <-  cbind(meta_table,
+                    Species = id_number[[1]][, 3],
+                    Genus = id_number[[2]][, 3],
+                    Family = id_number[[3]][, 3],
+                    Order = id_number[[4]][, 3],
+                    Class = id_number[[5]][, 3],
+                    Phylum = id_number[[6]][, 3])
+
+datatable(ID_result, extensions = 'Buttons',
+            options = list(dom = 'Blfrtip',
+                           scrollX = TRUE,
+                           buttons = c('copy', 'csv', 'excel'),
+                           pageLength = 10))
+}
 
 ```
 
 
 # Alpha diversity
 
-The figure below displays the alpha-diversity (Shannon-Wiener index) on the species level.
+Figure below show the alpha-diversity (Shannon-Wiener index) on each level.
 
-```{r alpha_fig, echo=FALSE,fig.width= 6,fig.height=4, cache = FALSE}
 
-    diversity <- round(diversity(t(summary_file_taxonomy$extract_species),index = "shannon"),3)
-    Alpha_diversity <- as.data.frame(diversity)
-    Alpha_diversity <- as.data.frame(cbind(names = rownames(Alpha_diversity), Alpha_diversity))
+```{r alpha_fig, echo=FALSE,fig.width= 10,fig.height=5, cache = FALSE}
 
-    ggplotly(ggplot(data=Alpha_diversity) +
-      geom_col(aes(x=names, y=diversity)) + theme_bw() +coord_flip()+
-      xlab("Sample labels") + ylab("Shannon-Wiener index")
-    )
+j = 1
+plot_diversity <- list()
+diversity_data <- list()
+taxa_level <- c("Species", "Genus", "Family", "Order", "Class", "Phylum")
+
+for (i in summary_file_taxonomy_short) {
+
+       if(is.null(meta_table)){
+       
+       diversity_taxa<- function(taxa_level){
+                          SWD <- round(vegan::diversity(t(taxa_level),index = "shannon"),3)
+                          Alpha_diversity <- as.data.frame(SWD)
+                          Alpha_diversity <- as.data.frame(cbind(names = rownames(Alpha_diversity), Alpha_diversity))
+                          return(Alpha_diversity)
+                        }
+       diversity_data[[j]] <- diversity_taxa(i)
+
+       }else{
+       diversity_taxa<- function(taxa_level){
+                          SWD <- round(vegan::diversity(t(taxa_level),index = "shannon"),3)
+                          Alpha_diversity <- as.data.frame(SWD)
+                          Alpha_diversity <- as.data.frame(cbind(names = rownames(Alpha_diversity),
+                                                                 Meta = meta_table$meta1, Alpha_diversity))
+                          return(Alpha_diversity)
+                        }
+       diversity_data[[j]] <- diversity_taxa(i)
+
+       plot_diversity[[j]] <- ggplotly(ggplot(data=diversity_data[[j]], aes(x=Meta, y=SWD) ) + 
+                    geom_jitter(position=position_jitter(width=0.3), alpha=0.9) +
+                    geom_boxplot(alpha = 0.8, show.legend = FALSE, aes(fill=factor(Meta))) + 
+                    scale_fill_brewer(palette="Dark2")+
+                    expand_limits(y = 0) + 
+                    ylab(paste0(taxa_level[j], " level"))+ theme_bw())
+       }
+  j = j+1
+}
+
+
+if(is.null(meta_table)){
+
+SWD_result_short <- cbind(Species = diversity_data[[1]][, ncol(diversity_data[[1]])],
+                          Genus = diversity_data[[2]][, ncol(diversity_data[[1]])],
+                          Family = diversity_data[[3]][, ncol(diversity_data[[1]])],
+                          Order = diversity_data[[4]][, ncol(diversity_data[[1]])],
+                          Class = diversity_data[[5]][, ncol(diversity_data[[1]])],
+                          Phylum = diversity_data[[6]][, ncol(diversity_data[[1]])])
+SWD_result_long <- melt(SWD_result_short)
+ggplotly(ggplot(SWD_result_long, aes(x=Var2, y = value))+
+             geom_boxplot(alpha = 0.8, show.legend = FALSE, aes(fill=factor(Var2))) + 
+             geom_jitter(position=position_jitter(width=0.3), alpha=0.9) +
+             scale_fill_brewer(palette="Dark2")+
+             expand_limits(y = 0) + 
+             ylab("Number of identificaton")+ xlab("Level") + theme_bw()) %>%
+             layout(autosize = F, width = 500, height = 400)
+
+  
+}else{
+ subplot(plot_diversity[[1]], plot_diversity[[2]], plot_diversity[[3]], 
+         plot_diversity[[4]], plot_diversity[[5]], plot_diversity[[6]], 
+         nrows = 2, margin = 0.04, titleY = TRUE) %>% layout(showlegend = FALSE)
+}
+
+```
+
+Result table for download
+```{r alpha_data, echo=FALSE,fig.width= 8,fig.height=4, cache = FALSE}
+# Generate result tables
+if(is.null(meta_table)){
+SWD_result <-  cbind(colnames(summary_file_taxonomy_short$extract_species),
+                    Species = diversity_data[[1]][, ncol(diversity_data[[1]])],
+                    Genus = diversity_data[[2]][, ncol(diversity_data[[1]])],
+                    Family = diversity_data[[3]][, ncol(diversity_data[[1]])],
+                    Order = diversity_data[[4]][, ncol(diversity_data[[1]])],
+                    Class = diversity_data[[5]][, ncol(diversity_data[[1]])],
+                    Phylum = diversity_data[[6]][, ncol(diversity_data[[1]])])  
+
+datatable(SWD_result, extensions = 'Buttons',
+            options = list(dom = 'Blfrtip',
+                           scrollX = TRUE,
+                           buttons = c('copy', 'csv', 'excel'),
+                           pageLength = 10))
+
+}else{
+SWD_result <- cbind(meta_table,
+                    Species = diversity_data[[1]][, 3],
+                    Genus = diversity_data[[2]][, 3],
+                    Family = diversity_data[[3]][, 3],
+                    Order = diversity_data[[4]][, 3],
+                    Class = diversity_data[[5]][, 3],
+                    Phylum = diversity_data[[6]][, 3])
+
+datatable(SWD_result, extensions = 'Buttons',
+            options = list(dom = 'Blfrtip',
+                           scrollX = TRUE,
+                           buttons = c('copy', 'csv', 'excel'),
+                           pageLength = 10))
+}
 
 ```
 
 
-`r if(ncol(summary_file_taxonomy$extract_species) >2){"# Beta diversity   \n**The figure below displays the beta-diversity on the species level, visualized using PCoA**"}`
+`r if(ncol(summary_file_taxonomy_short$extract_species) >2){"# Beta diversity   \n**The figure below displays the beta-diversity on the species level, visualized using PCoA**"}`
 
 
 
-The figure below displays the beta-diversity on the species level, visualized using PCoA.
-```{r beta, echo=FALSE,fig.width= 8,fig.height=8}
+The figure below displays the beta-diversity on the species level, which calculates the Bray-Curtis distances between samples and visualizes using PCoA.
+```{r beta, echo=FALSE,fig.width= 6,fig.height=6}
 
-data_matrix_t <- t(summary_file_taxonomy$extract_species)
+data_matrix_t <- t(summary_file_taxonomy_short$extract_species)
 d.bray <- vegan::vegdist(data_matrix_t)
 show.d.bray <- as.matrix(d.bray)
+    
 
-if(nrow(data_matrix_t) >3){
-  pc.bray <- cmdscale(d.bray, k=3, eig = TRUE)
+      
+if(is.null(meta_table)){
 
-  beta_diversity <- as.data.frame(pc.bray$points)
-  beta_diversity <- as.data.frame(cbind(names = rownames(beta_diversity), beta_diversity))
-
- plot_ly(beta_diversity, x = ~V1, y = ~V2, z = ~V3, color = ~names, colors = c("red","orange","yellow","green","cyan","blue","purple","black","gray50","gray80")) %>%
-  add_markers() %>%
-  add_text(text = ~names) %>%
-  hide_legend()
-
-}else if (nrow(data_matrix_t) ==3){
-  pc.bray <- cmdscale(d.bray, k=2, eig = TRUE)
-
-  beta_diversity <- as.data.frame(pc.bray$points)
-  beta_diversity <- as.data.frame(cbind(names = rownames(beta_diversity), beta_diversity))
-
- plot_ly(beta_diversity, x = ~V1, y = ~V2, color = ~names, colors = c("red","orange","yellow","green","cyan","blue","purple","black","gray50","gray80")) %>%
-  add_markers() %>%
-  add_text(text = ~names) %>%
-  hide_legend()
+    if(nrow(data_matrix_t) >3){
+      pc.bray <- cmdscale(d.bray, k=3, eig = TRUE)
+    
+      beta_diversity <- as.data.frame(pc.bray$points)
+      beta_diversity <- as.data.frame(cbind(names = rownames(beta_diversity), beta_diversity))
+      
+      plot_ly(beta_diversity, x = ~V1, y = ~V2, z = ~V3, color = ~names,
+              colors = "Dark2") %>%
+              add_markers() %>%
+              add_text(text = ~names) %>%
+              hide_legend() %>%
+              layout(title = "Bray-Curtis PCoA",
+                     scene = list(xaxis = list(title = "PCoA 1"),
+                                  yaxis = list(title = "PCoA 2"),
+                                  zaxis = list(title = "PCoA 3")))
+    
+    }else if (nrow(data_matrix_t) ==3){
+      pc.bray <- cmdscale(d.bray, k=2, eig = TRUE)
+    
+      beta_diversity <- as.data.frame(pc.bray$points)
+      beta_diversity <- as.data.frame(cbind(names = rownames(beta_diversity), beta_diversity))
+    
+     plot_ly(beta_diversity, x = ~V1, y = ~V2, color = ~names,
+             colors = "Dark2") %>%
+             add_markers() %>%
+             add_text(text = ~names) %>%
+             hide_legend() %>%
+              layout(title = "Bray-Curtis PCoA",
+                     scene = list(xaxis = list(title = "PCoA 1"),
+                                  yaxis = list(title = "PCoA 2"),
+                                  zaxis = list(title = "PCoA 3")))
+    }
+}else{
+    
+    if(nrow(data_matrix_t) >3){
+      pc.bray <- cmdscale(d.bray, k=3, eig = TRUE)
+    
+      beta_diversity <- as.data.frame(pc.bray$points)
+      beta_diversity <- as.data.frame(cbind(names = rownames(beta_diversity), Meta = meta_table$meta1, beta_diversity))
+      
+      plot_ly(beta_diversity, x = ~V1, y = ~V2, z = ~V3,color = ~Meta,
+              colors ="Dark2") %>%
+              add_markers() %>%
+              add_trace(
+                text = ~names,
+                showlegend = F
+              ) %>%
+              layout(title = "Bray-Curtis PCoA",
+                     scene = list(xaxis = list(title = "PCoA 1"),
+                                  yaxis = list(title = "PCoA 2"),
+                                  zaxis = list(title = "PCoA 3")))
+      
+    }else if (nrow(data_matrix_t) ==3){
+      pc.bray <- cmdscale(d.bray, k=2, eig = TRUE)
+    
+      beta_diversity <- as.data.frame(pc.bray$points)
+      beta_diversity <- as.data.frame(cbind(names = rownames(beta_diversity), Meta = meta_table$meta1, beta_diversity))
+    
+      plot_ly(beta_diversity, x = ~V1, y = ~V2, color = ~Meta,
+             colors = "Dark2") %>%
+             add_markers() %>%
+             layout(title = "Bray-Curtis PCoA",
+                     scene = list(xaxis = list(title = "PCoA 1"),
+                                  yaxis = list(title = "PCoA 2")))
+    }
+  
+  
 }
-
 
 
 ```
@@ -288,74 +475,78 @@ Distance measure used is "euclidean", and agglomeration method used is "ward.D".
 (Clustering analysis will be performed when there are more than 2 samples)
 
 ```{r cluster_fig, echo=FALSE,fig.width= 8, fig.height=4}
-if(ncol(summary_file_taxonomy$extract_species) >2){
-  distance <- dist(t(summary_file_taxonomy$extract_species), method = "euclidean")
+
+if(ncol(summary_file_taxonomy_short$extract_species) >2){
+  distance <- dist(t(summary_file_taxonomy_short$extract_species), method = "euclidean")
   fit <- hclust(distance, method= "ward.D")
+  dendro_fit <- as.dendrogram(fit)
   ggdendrogram(fit, rotate = TRUE, theme_dendro = FALSE, size = 2) + xlab("Samples") + ylab("Distance") +
-               theme_bw()
+               theme_bw() 
   
+}else{
+  print("There are not enough samples to do clustering.")
 }
 
 
 ```
 
 
-# Taxonomic composition bar plots
+# Stacked bar plots based on protein biomass
 
-## Combosition bar plot, species-level:
+## Stacked bar plot, species-level:
 ```{r composition_fig1, echo=FALSE,fig.width= 10,fig.height=6}
 
-  ggplotly(ggplot(summary_file_taxonomy$extract_species_gg, aes(x = Sample, y = Intensity, fill = Name)) +
+  ggplotly(ggplot(summary_file_taxonomy_long$extract_species_gg, aes(x = Sample, y = Intensity, fill = Name)) +
              geom_bar(stat='identity') + theme_bw() +
              ylab("Intensity") + theme(axis.text.x = element_text(angle = 45, hjust = 1))
   )
 
 ```
 
-## Combosition bar plot, genus-level:
+## Stacked bar plot, genus-level:
 ```{r composition_fig2, echo=FALSE,fig.width= 10,fig.height=6}
 
-  ggplotly(ggplot(summary_file_taxonomy$extract_genus_gg, aes(x = Sample, y = Intensity, fill = Name)) +
+  ggplotly(ggplot(summary_file_taxonomy_long$extract_genus_gg, aes(x = Sample, y = Intensity, fill = Name)) +
              geom_bar(stat='identity') + theme_bw() +
              ylab("Intensity") + theme(axis.text.x = element_text(angle = 45, hjust = 1))
   )
 
 ```
 
-## Combosition bar plot, family-level:
+## Stacked bar plot, family-level:
 ```{r composition_fig3, echo=FALSE,fig.width= 10,fig.height=6}
 
-  ggplotly(ggplot(summary_file_taxonomy$extract_family_gg, aes(x = Sample, y = Intensity, fill = Name)) +
+  ggplotly(ggplot(summary_file_taxonomy_long$extract_family_gg, aes(x = Sample, y = Intensity, fill = Name)) +
              geom_bar(stat='identity') + theme_bw() +
              ylab("Intensity") + theme(axis.text.x = element_text(angle = 45, hjust = 1))
   )
 
 ```
 
-## Combosition bar plot, order-level:
+## Stacked bar plot, order-level:
 ```{r composition_fig4, echo=FALSE,fig.width= 10,fig.height=6}
 
-  ggplotly(ggplot(summary_file_taxonomy$extract_order_gg, aes(x = Sample, y = Intensity, fill = Name)) +
+  ggplotly(ggplot(summary_file_taxonomy_long$extract_order_gg, aes(x = Sample, y = Intensity, fill = Name)) +
              geom_bar(stat='identity') + theme_bw() +
              ylab("Intensity") + theme(axis.text.x = element_text(angle = 45, hjust = 1))
   )
 
 ```
 
-## Combosition bar plot, class-level:
+## Stacked bar plot, class-level:
 ```{r composition_fig5, echo=FALSE,fig.width= 10,fig.height=6}
 
-  ggplotly(ggplot(summary_file_taxonomy$extract_class_gg, aes(x = Sample, y = Intensity, fill = Name)) +
+  ggplotly(ggplot(summary_file_taxonomy_long$extract_class_gg, aes(x = Sample, y = Intensity, fill = Name)) +
              geom_bar(stat='identity') + theme_bw() +
              ylab("Intensity") + theme(axis.text.x = element_text(angle = 45, hjust = 1))
   )
 
 ```
 
-## Combosition bar plot, phylum-level:
+## Stacked bar plot, phylum-level:
 ```{r composition_fig6, echo=FALSE,fig.width= 10,fig.height=6}
 
-  ggplotly(ggplot(summary_file_taxonomy$extract_phylum_gg, aes(x = Sample, y = Intensity, fill = Name)) +
+  ggplotly(ggplot(summary_file_taxonomy_long$extract_phylum_gg, aes(x = Sample, y = Intensity, fill = Name)) +
              geom_bar(stat='identity') + theme_bw() +
              ylab("Intensity") + theme(axis.text.x = element_text(angle = 45, hjust = 1))
   )
